--- a/MyMoney/app/build.gradle
+++ b/MyMoney/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.github.markushi:circlebutton:1.1'
-    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.7'
 }
