--- a/MyMoney/app/src/main/AndroidManifest.xml
+++ b/MyMoney/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,13 +29,21 @@
             android:label="@string/title_activity_costs"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Activity.PlansActivity"
+            android:name=".Activity.PlaningActivity"
             android:label="@string/title_activity_plans"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Activity.InfoActivity"
             android:label="@string/title_activity_info"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.EditingIncomeActivity"
+            android:label="@string/title_activity_editing_income"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity.EditingSpendingActivity"
+            android:label="@string/title_activity_editing_spending"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
