--- a/MyMoney/build.gradle
+++ b/MyMoney/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         jcenter()
         mavenCentral()
         mavenLocal()
+        maven {
+            url "https://maven.google.com"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
