--- a/MyMoney/app/build.gradle
+++ b/MyMoney/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.github.markushi:circlebutton:1.1'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:mediarouter-v7:26.1.0'
 }
