--- a/MyMoney/app/build.gradle
+++ b/MyMoney/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'com.android.support:percent:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:mediarouter-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:support-v4:26.+'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
 }
